--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="recipes/cake.html.txt">cake</a>
-    <h2>hi</h2>
+    <a href="recipes/cake.html">cake</a>
 </body>
 </html>
