--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>cake</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CAKES</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>cake</h1>
+    <h1>CHOCOLATE CAKE</h1>
+    <img src="C:\Users\HP\repos\odin-recipes\recipes\cake pic.jpeg" alt="Its a chocolate cake">
+    <h2>Chocolate cake ingredients:</h2>
+    <ul>
+        <li>1 3/4 cups all purpose flour, or (plain flour), (8 oz | 227 g)</li>
+        <li>3/4 cup unsweetened cocoa powder, (2.6 oz | 75 g) or regular Hershey's cocoa powder.</li>
+        <li>1 1/2 teaspoon baking powder.</li>
+        <li>1 1/2 teaspoon baking soda, (or bi-carb soda)</li>
+        <li>1 teaspoon salt.</li>
+        <li>2 cups white granulated sugar, (14 oz | 410 g)</li>
+        <li>2 large eggs.</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+        <li> oven to 180⁰ C. Lightly grease an 8” diameter baking tin and dust with flour.</li>
+            <li>Sieve together maida, cocoa powder and baking powder.Keep aside.</li>
+                    <li>Soften butter in a bowl, add powdered sugar and beat well to a creamy consistency. Add Vanilla essence and mix.</li> 
+                        <li>Slowly beat in the eggs one by one, then fold in the sieved maida mixture and mix well.</li>
+                        <li> Add the Nestlé a+ Nourish Milk and mix to get a dropping consistency
+Pour the batter into the prepared baking tin and bake in the preheated oven for 40 -45 minutes or till tooth pick inserted in the center of the cake comes out clean.
+Remove from oven, cool for a while.</li>
+<li>Turn out over a wire rack or plate.
+For Fudge Icing: Mix together Nestlé MILKMAID Sweetened Condensed Milk, cocoa powder and butter and beat well. Microwave for 20 seconds, mix well.</li>
+<li>Spread over the cooled cake and leave to set. Slice and serve</li>
+    </ol>
 </body>
 </html>
